--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.57.4",
@@ -22,7 +23,7 @@
     "lucide-react": "^0.561.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.68.0",
+    "react-hook-form": "^7.69.0",
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
